Fixed bug #72581 (previous property undefined in Exception after deserialization)